--- a/processors/gitlab/pom.xml
+++ b/processors/gitlab/pom.xml
@@ -23,7 +23,7 @@
   <description>GitLab processor service</description>
   <packaging>jar</packaging>
   <artifactId>gitlab-processor</artifactId>
-  <version>11.0.0-SNAPSHOT</version>
+  <version>11.1.0</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -268,6 +268,6 @@
 
 
   <scm>
-    <tag>4.6.1</tag>
+    <tag>11.1.0</tag>
   </scm>
 </project>
