--- a/processors/jira-zephyr-scale/pom.xml
+++ b/processors/jira-zephyr-scale/pom.xml
@@ -23,7 +23,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>Zephyr Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>11.0.0-SNAPSHOT</version>
+	<version>11.1.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -277,6 +277,6 @@
 	</build>
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>11.1.0</tag>
 	</scm>
 </project>
