--- a/customapi/src/main/resources/application.properties
+++ b/customapi/src/main/resources/application.properties
@@ -435,3 +435,6 @@ mongock.migration-scan-package=com.publicissapient.kpidashboard.apis.mongock.ins
 #The base version for Mongock is 8.0.0, so for upgrading an instance, maintain it as 8.0.0
 #mongock.start-system-version=8.0.0
 #mongock.end-system-version=8.0.0
+
+spring.cache.type=jcache
+spring.cache.jcache.config=classpath:ehcache.xml
